objects/Country__c.object
<CustomObject>
    <description>CORE Model</description>
    <fields>
        <fullName>AX_Legal_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What it does?  Holds AX legal entity associated with the account attached to the DR.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>AX Legal Entity</label>
        <referenceTo>AX_Legal_Entity__c</referenceTo>
        <relationshipLabel>Countries</relationshipLabel>
        <relationshipName>Countries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Basic_Care_New_End_User__c</fullName>
        <label>Basic Care-New(End User)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Basic_Care_New_Partner__c</fullName>
        <label>Basic Care-New(Partner)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Basic_Care_Renewal_End_User__c</fullName>
        <label>Basic Care-Renewal(End User)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Basic_Care_Renewal_Partner__c</fullName>
        <label>Basic Care-Renewal(Partner)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Basic_Support_New_End_User__c</fullName>
        <label>Basic Support–New(End User)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Basic_Support_New_Partner__c</fullName>
        <label>Basic Support–New(Partner)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Basic_Support_Renewal_End_User__c</fullName>
        <label>Basic Support–Renewal(End User)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Basic_Support_Renewal_Partner__c</fullName>
        <label>Basic Support–Renewal(Partner)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Basic_Support__c</fullName>
        <label>Basic Support</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Big_Four__c</fullName>
        <label>Big Four</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Big_Six__c</fullName>
        <label>Big Six</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>ANZ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Care_New_End_User_Licensing__c</fullName>
        <label>Business Care-New(End User)(Licensing)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Business_Care_New_End_User__c</fullName>
        <label>Business Care-New(End User)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Business_Care_New_Partner_Licensing__c</fullName>
        <label>Business Care-New(Partner)(Licensing)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Business_Care_New_Partner__c</fullName>
        <label>Business Care-New(Partner)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Business_Care_Renewal_End_User__c</fullName>
        <label>Business Care-Renewal(End User)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Business_Care_Renewal_Partner__c</fullName>
        <label>Business Care-Renewal(Partner)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Business_Region_Code__c</fullName>
        <formula>Business_Region__r.Region_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Region Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Region</label>
        <referenceTo>Business_Region__c</referenceTo>
        <relationshipLabel>Countries</relationshipLabel>
        <relationshipName>Countries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <externalId>true</externalId>
        <label>Country</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DAP_Region__c</fullName>
        <label>DAP Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Country_Name__c</fullName>
        <label>Finance Country Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISO_Code2__c</fullName>
        <label>ISO Code2</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISO_Code__c</fullName>
        <description>What it Does?  Holds the country&apos;s ISO Code.  Downstream Impact?  None.  Which Department is Owner?  Sales Ops.

Part of the DEMO REQUEST process.</description>
        <externalId>true</externalId>
        <label>ISO Code</label>
        <length>3</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Journey_Engagement_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Journey Engagement Rep</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>GEN - MKG - Lead Development Rep, GEN - MKG - Journey Engagement Rep</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Countries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Journey_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Journey Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>GEN - MKG - Lead Development Rep, GEN - MKG - Lead Development Rep Manager</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Countries1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LegacyId__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Country Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_Created_By__c</fullName>
        <label>Legacy Created By</label>
        <length>121</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_EMG_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy EMG Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_Last_Modified_By__c</fullName>
        <label>Legacy Last Modified By</label>
        <length>121</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Last_Modified_Date__c</fullName>
        <label>Legacy Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Market_Type__c</fullName>
        <label>Market Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>North America (NA)</fullName>
                </value>
                <value>
                    <fullName>Major Market (MAJ)</fullName>
                </value>
                <value>
                    <fullName>Large Market (LG)</fullName>
                </value>
                <value>
                    <fullName>Mid-sized Market (MID)</fullName>
                </value>
                <value>
                    <fullName>Small Market (SM)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Reporting_Sub_Region__c</fullName>
        <description>DL 2/8 Requested by Melissa Luis</description>
        <label>Marketing Reporting Sub_Region</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_DAP_Region__c</fullName>
        <label>New DAP Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Price_Book__c</fullName>
        <label>New Price Book</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_DAP_Region__c</fullName>
        <label>Old DAP Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Price_Book__c</fullName>
        <label>Old Price Book</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Pricing_DAP_Region__c</fullName>
        <label>Old Pricing DAP Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Sub_Region__c</fullName>
        <label>Old Sub Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Sub_Sub_Region__c</fullName>
        <label>Old Sub Sub Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSRDP_Region__c</fullName>
        <label>PSRDP Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium_Care_New_End_User_Licensing__c</fullName>
        <label>Premium Care-New(End User)(Licensing)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Premium_Care_New_End_User__c</fullName>
        <label>Premium Care-New(End User)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Premium_Care_New_Partner_Licensing__c</fullName>
        <label>Premium Care-New(Partner)(Licensing)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Premium_Care_New_Partner__c</fullName>
        <label>Premium Care-New(Partner)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Premium_Care_Renewal_End_User__c</fullName>
        <label>Premium Care-Renewal(End User)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Premium_Care_Renewal_Partner__c</fullName>
        <label>Premium Care-Renewal(Partner)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Priority_Support_New_End_User__c</fullName>
        <label>Priority Support–New(End User)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Priority_Support_New_Partner__c</fullName>
        <label>Priority Support–New(Partner)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Priority_Support_Renewal_End_User__c</fullName>
        <label>Priority Support–Renewal(End User)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Priority_Support_Renewal_Partner__c</fullName>
        <label>Priority Support–Renewal(Partner)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Priority_Support__c</fullName>
        <label>Priority Support</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PureCloud_Delivery_Option__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What it Does? Used to store default delivery option under service orders for each country for PureCloud 
Downstream Impact? N/A 
Which department is owner? Sales Ops</description>
        <label>PureCloud Delivery Option</label>
        <referenceTo>Loop__DDP_Integration_Option__c</referenceTo>
        <relationshipLabel>Countries (PureCloud Delivery Option)</relationshipLabel>
        <relationshipName>Countries1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PureCloud_Selling_Entity_CB__c</fullName>
        <description>This field is storing Pure Cloud Selling Entity Information for CloudBilling.
This filed is owned by CloudBilling Team.</description>
        <label>PureCloud Selling Entity CB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PureCloud_Selling_Entity__c</fullName>
        <description>What it Does? Used to store default Genesys selling entity for each country for PureCloud 
Downstream Impact? N/A 
Which department is owner? Sales Ops</description>
        <label>PureCloud Selling Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PureConnect_Cloud_Delivery_Option__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What it Does? Used to store default delivery option under service orders for each country for PureConnect Cloud
Downstream Impact? N/A
Which department is owner? Sales Ops</description>
        <label>PureConnect Cloud Delivery Option</label>
        <referenceTo>Loop__DDP_Integration_Option__c</referenceTo>
        <relationshipLabel>Countries</relationshipLabel>
        <relationshipName>Countries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PureConnect_Cloud_Selling_Entity_CB__c</fullName>
        <description>Cloud Billing reference to the Genesys Entity for Pure Connect</description>
        <inlineHelpText>Cloud Billing reference to the Genesys Entity for Pure Connect</inlineHelpText>
        <label>PureConnect Cloud Selling Entity CB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PureConnect_Cloud_Selling_Entity__c</fullName>
        <description>What it Does? Used to store default Genesys selling entity for each country for PureConnect Cloud
Downstream Impact? N/A
Which department is owner? Sales Ops</description>
        <label>PureConnect Cloud Selling Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PureConnect_Premise_Delivery_Option__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What it Does? Used to store default delivery option under service orders for each country for PureConnect Premise 
Downstream Impact? N/A 
Which department is owner? Sales Ops</description>
        <label>PureConnect Premise Delivery Option</label>
        <referenceTo>Loop__DDP_Integration_Option__c</referenceTo>
        <relationshipLabel>Countries (PureConnect Premise Delivery Option)</relationshipLabel>
        <relationshipName>Countries2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PureEngage_Cloud_Delivery_Option__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PureEngage Cloud Delivery Option</label>
        <referenceTo>Loop__DDP_Integration_Option__c</referenceTo>
        <relationshipLabel>Countries (PureEngage Cloud Delivery Option)</relationshipLabel>
        <relationshipName>Countries3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PureEngage_Cloud_Selling_Entity__c</fullName>
        <label>PureEngage Cloud Selling Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RU__c</fullName>
        <description>CORE Model</description>
        <label>Sub Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ANZ</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>DACH</fullName>
                </value>
                <value>
                    <fullName>France &amp; N. Africa</fullName>
                </value>
                <value>
                    <fullName>Greater China</fullName>
                </value>
                <value>
                    <fullName>Iberia</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>UKI</fullName>
                </value>
                <value>
                    <fullName>Benelux</fullName>
                </value>
                <value>
                    <fullName>ECSEI</fullName>
                </value>
                <value>
                    <fullName>Nordics</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>Italy &amp; Middle East</fullName>
                </value>
                <value>
                    <fullName>South East Asia</fullName>
                </value>
                <value>
                    <fullName>Andean</fullName>
                </value>
                <value>
                    <fullName>Southern Cone</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Middle East</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>CORE Model</description>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SW_Download_Site__c</fullName>
        <description>Site of the software download. Actual URL is stored in Custom Settings.</description>
        <inlineHelpText>This is the location of the software download server.</inlineHelpText>
        <label>SW Download Site</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_org__c</fullName>
        <label>Sales org</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>8100 US</fullName>
                </value>
                <value>
                    <fullName>8110 Canada</fullName>
                </value>
                <value>
                    <fullName>8300 UK</fullName>
                </value>
                <value>
                    <fullName>8305 France</fullName>
                </value>
                <value>
                    <fullName>8310 Germany</fullName>
                </value>
                <value>
                    <fullName>8315 Italy</fullName>
                </value>
                <value>
                    <fullName>8325 Dutch Ops</fullName>
                </value>
                <value>
                    <fullName>8400 Australia</fullName>
                </value>
                <value>
                    <fullName>8405 Korea</fullName>
                </value>
                <value>
                    <fullName>8410 Singapore</fullName>
                </value>
                <value>
                    <fullName>8415 India</fullName>
                </value>
                <value>
                    <fullName>8420 Japan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Services_Tax_Rate__c</fullName>
        <label>Services Tax Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Software_Tax_Rate__c</fullName>
        <label>Software Tax Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Standard_Support_New_End_User__c</fullName>
        <label>Standard Support–New(End User)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Standard_Support_New_Partner__c</fullName>
        <label>Standard Support–New(Partner)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Standard_Support_Renewal_End_User__c</fullName>
        <label>Standard Support–Renewal(End User)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Standard_Support_Renewal_Partner__c</fullName>
        <label>Standard Support–Renewal(Partner)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Standard_Support__c</fullName>
        <label>Standard Support</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SubRU__c</fullName>
        <description>CORE Model</description>
        <label>Sub-Sub Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Andean &amp; Central</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Belux</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Central, South East Europe and Israel (CSEI)</fullName>
                </value>
                <value>
                    <fullName>CIS</fullName>
                </value>
                <value>
                    <fullName>CIS &amp; Central/Eastern Europe</fullName>
                </value>
                <value>
                    <fullName>CS Europe</fullName>
                </value>
                <value>
                    <fullName>France Pacific</fullName>
                </value>
                <value>
                    <fullName>France Reg.</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Greece Reg.</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Israel</fullName>
                </value>
                <value>
                    <fullName>Italy Reg.</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Macao</fullName>
                </value>
                <value>
                    <fullName>Mainland China</fullName>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
                <value>
                    <fullName>Maldives</fullName>
                </value>
                <value>
                    <fullName>Malta</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Middle East</fullName>
                </value>
                <value>
                    <fullName>N&amp;B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubRegion__c</fullName>
        <description>Champ créé le 9/09/11 suite à réorganisation des Regions pour EMEA</description>
        <label>Sub Region Old</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>AMERICAS</fullName>
                </value>
                <value>
                    <fullName>EUNO</fullName>
                </value>
                <value>
                    <fullName>EUSO</fullName>
                </value>
                <value>
                    <fullName>MEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Region__c</fullName>
        <label>Support Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <label>Tax Rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Training_Tax_Rate__c</fullName>
        <label>Training Tax Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VIP_Priority_Support_New_End_User__c</fullName>
        <label>VIP Priority Support-New(End User)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VIP_Priority_Support_New_Partner__c</fullName>
        <label>VIP Priority Support-New(Partner)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VIP_Priority_Support_Renewal_End_User__c</fullName>
        <label>VIP Priority Support-Renewal(End User)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VIP_Priority_Support_Renewal_Partner__c</fullName>
        <label>VIP Priority Support-Renewal(Partner)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VIP_Priority_Support__c</fullName>
        <label>VIP Priority Support</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X18_Digit_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>price_book__c</fullName>
        <label>Price Book</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA-EMR</fullName>
                </value>
                <value>
                    <fullName>NA-USD</fullName>
                </value>
                <value>
                    <fullName>EMEA-USD</fullName>
                </value>
                <value>
                    <fullName>Cala - USD</fullName>
                </value>
                <value>
                    <fullName>APAC-USD</fullName>
                </value>
                <value>
                    <fullName>EMEA-EUR</fullName>
                </value>
                <value>
                    <fullName>Japan-JPY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>selling_entity__c</fullName>
        <label>Selling Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Country</label>
    <listViews>
        <fullName>All_Countries</fullName>
        <columns>NAME</columns>
        <columns>ISO_Code__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>DAP_Region__c</columns>
        <columns>New_DAP_Region__c</columns>
        <columns>Region__c</columns>
        <columns>RU__c</columns>
        <columns>SubRU__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Old_DAP_Region__c</columns>
        <columns>Finance_Country_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Countries</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CIS_Central_Eastern_Europe</fullName>
        <columns>NAME</columns>
        <columns>SubRU__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>LegacyId__c</columns>
        <columns>Legacy_EMG_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SubRU__c</field>
            <operation>equals</operation>
            <value>CIS &amp; Central/Eastern Europe</value>
        </filters>
        <label>CIS &amp; Central/Eastern Europe</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SW_Dowloads</fullName>
        <columns>NAME</columns>
        <columns>SW_Download_Site__c</columns>
        <filterScope>Everything</filterScope>
        <label>SW Dowloads</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Country Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Countries</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>